OpenGL render: alpha lost with AO or DOF enabled #43689

Closed
opened 2015-02-16 12:37:32 +01:00 by Cezary Kopias · 5 comments

System Information
Ubuntu 14.04, Intel HD 4000

Blender Version
Broken: 2.73 b1dbda1

Short description of error
alpha channel is lost (only white) in opengl render when AO or DOF enabled

Exact steps for others to reproduce the error
Load Factory Defaults
set opengl alpha mode to : transparent{F143694}
do a opengl test render see that there is proper alpha of a cube
enable AO or DOF from shading and render again
check alpha{F143695}

**System Information** Ubuntu 14.04, Intel HD 4000 **Blender Version** Broken: 2.73 b1dbda1 **Short description of error** alpha channel is lost (only white) in opengl render when AO or DOF enabled **Exact steps for others to reproduce the error** Load Factory Defaults set opengl alpha mode to : transparent{[F143694](https://archive.blender.org/developer/F143694/screen.png)} do a opengl test render see that there is proper alpha of a cube enable AO or DOF from shading and render again check alpha{[F143695](https://archive.blender.org/developer/F143695/screen1.png)}
Author

Changed status to: 'Open'

Changed status to: 'Open'
Antonis Ryakiotakis was assigned by Cezary Kopias 2015-02-16 12:37:32 +01:00
Author

Added subscriber: @kopias

Added subscriber: @kopias

This issue was referenced by bbe1b54818

This issue was referenced by bbe1b54818d7bb349ddf63efbcb18347a78cf714

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit bbe1b54818.

Closed by commit bbe1b54818.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43689
No description provided.